[TF-645] add style for 404 page

--- a/assets/styles/frontend/common/components/box/breadcrumb.less
+++ b/assets/styles/frontend/common/components/box/breadcrumb.less
@@ -7,10 +7,12 @@
 @box-breadcrumb-bottom-gap: 25px;
 
 .box-breadcrumb {
+    position: relative;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: @box-breadcrumb-bottom-gap;
+    z-index: @z-index-above;
 
     font-size: 0;
 
