--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -155,6 +155,7 @@
 @import "components/box/order-detail.less";
 @import "components/box/order-done.less";
 @import "components/box/orders.less";
+@import "components/box/page-404.less";
 @import "components/box/pickup-place.less";
 @import "components/box/popup-add.less";
 @import "components/box/prelist.less";
