design: remove style from todo.less

--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -121,6 +121,10 @@
         &--out-of-stock {
             color: @color-alert;
         }
+
+        &--available-in-days {
+            color: @color-primary;
+        }
     }
 
     &__next-line {
