--- a/assets/styles/frontend/common/layout/header/cart-detail.less
+++ b/assets/styles/frontend/common/layout/header/cart-detail.less
@@ -154,6 +154,16 @@
         }
     }
 
+    &__promo-code {
+        color: @color-gray;
+        font-size: @font-size-small;
+
+        &__discount {
+            color: @color-price-discount;
+            float: right;
+        }
+    }
+
     &__total {
         display: flex;
         padding-top: @cart-detail-padding;
