--- a/assets/styles/frontend/common/layout/layout.less
+++ b/assets/styles/frontend/common/layout/layout.less
@@ -114,6 +114,10 @@ img {
         &--light {
             background-color: @color-light;
         }
+
+        &--full-width {
+            width: 100%;
+        }
     }
 
     &__main {
