--- a/assets/styles/frontend/common/components/in/article.less
+++ b/assets/styles/frontend/common/components/in/article.less
@@ -9,6 +9,10 @@
             width: @in-article-container-max-width;
             margin: 0 auto;
         }
+
+        &--full-width {
+            width: 100%;
+        }
     }
 
     &__date {
