--- a/templates/Front/Content/Product/productViewAvailability.html.twig
+++ b/templates/Front/Content/Product/productViewAvailability.html.twig
@@ -4,7 +4,7 @@
 {% elseif productView.realSaleStocksQuantity > 0 %}
     {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity, productView.unitName) }}
 {% elseif productView.isAvailableInDays %}
-    <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
+    <span class="in-availability__date in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
 {% else %}
     {{ productView.availability }}
 {% endif %}
