design: fix bugs in the inputs

--- a/assets/styles/frontend/common/components/box/price-slider.less
+++ b/assets/styles/frontend/common/components/box/price-slider.less
@@ -53,6 +53,10 @@
                     color: @color-base;
                     font-weight: 400;
                 }
+
+                &:focus {
+                    padding: 0 3px;
+                }
             }
 
             &--left {
