--- a/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
@@ -133,20 +133,16 @@
                                 <typ:unitPrice>{{ pohodaOrderItem.unitPriceWithVat.amount|round(4) }}</typ:unitPrice>
                             </ord:homeCurrency>
                         {% endif -%}
-                        {% if pohodaOrderItem.catnum is not null or pohodaOrderItem.pohodaStockId is not null -%}
+                        {% if pohodaOrderItem.catnum is not null and pohodaOrderItem.pohodaStockId is not null -%}
                             <ord:stockItem>
-                                {% if pohodaOrderItem.catnum is not null -%}
-                                    <typ:stockItem>
-                                        <typ:ids>
-                                            <![CDATA[{{ pohodaOrderItem.catnum }}]]>
-                                        </typ:ids>
-                                    </typ:stockItem>
-                                {% endif -%}
-                                {% if pohodaOrderItem.pohodaStockId is not null -%}
-                                    <typ:store>
-                                        <typ:id>{{ pohodaOrderItem.pohodaStockId }}</typ:id>
-                                    </typ:store>
-                                {% endif -%}
+                                <typ:stockItem>
+                                    <typ:ids>
+                                        <![CDATA[{{ pohodaOrderItem.catnum }}]]>
+                                    </typ:ids>
+                                </typ:stockItem>
+                                <typ:store>
+                                    <typ:id>{{ pohodaOrderItem.pohodaStockId }}</typ:id>
+                                </typ:store>
                             </ord:stockItem>
                         {% endif -%}
                         {% if pohodaOrderItem.pohodaStockName is not null -%}
