[TF-639] Remove filtering by stock

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -13,6 +13,10 @@
         overflow: hidden;
     }
 }
+// TODO KOD: TF-639 - filtrování dle dostupnosti
+#product_filter_form_parameters div:last-child .box-filter__choice {
+    border-bottom: none;
+}
 
 // TODO KOD: https://shopsys.atlassian.net/browse/TF-128
 .box-detail__image__stickers, .list-products__item__image__stickers, .list-products-slider__item__image__stickers {
