--- a/templates/Front/Content/Order/step2.html.twig
+++ b/templates/Front/Content/Order/step2.html.twig
@@ -31,7 +31,8 @@
                             transportId: transport is empty ? null : transport.id,
                             paymentId: payment is empty ? null : payment.id,
                             orderStep: '2',
-                            formSubmit: form.save
+                            formSubmit: form.save,
+                            registration: form.vars['value'].registration
                         })) }}
                     </div>
                 </div>
