design: edit small css issues and refaktoring of list article products

--- a/assets/styles/frontend/common/components/in/user-text.less
+++ b/assets/styles/frontend/common/components/in/user-text.less
@@ -185,6 +185,7 @@
 
             font-size: @in-user-text-font-size;
             border: 1px solid @color-border;
+            word-break: break-all;
 
             &:first-child {
                 text-align: left;
