--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -64,7 +64,7 @@
                             </div>
 
                             <div class="box-order__info__content__right">
-                                <h3 class="box-order__info__title"><strong>3% sleva</strong> za registraci platí <strong>již na tento nákup!</strong></h3>
+                                <h3 class="box-order__info__title"><strong>{{ '3% sleva'|trans }}</strong> {{ 'za registraci může platit'|trans }} <strong>{{ 'již na tento nákup!'|trans }}</strong></h3>
 
                                 <div class="js-order-registration-fields display-none">
                                     {{ form_widget(form.registration, {
