--- a/assets/styles/frontend/common/components/list/article-product.less
+++ b/assets/styles/frontend/common/components/list/article-product.less
@@ -1,6 +1,7 @@
 @list-article-product-item-padding: 20px;
 @list-article-product-item-image-size: 70px;
 @list-article-product-item-title-rows: 2;
+@list-article-product-item-info-left: 40%;
 
 .list-article-product {
     position: relative;
@@ -11,13 +12,14 @@
 
     &__item {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         margin-bottom: 15px;
         padding-bottom: 18px;
 
         border-bottom: 1px solid @color-border;
 
-        @media @query-md {
+        @media @query-sm {
             flex-direction: row;
         }
 
@@ -28,76 +30,68 @@
         }
 
         &__image {
-            display: flex;
             position: relative;
-            align-self: center;
-            height: @list-article-product-item-image-size;
             width: @list-article-product-item-image-size;
-            margin: auto;
-
-            @media @query-md {
-                margin: 0;
-            }
-
-            img {
-                max-height: 100%;
-            }
-
-            picture {
-                margin: 0 auto;
-            }
+            margin: 0;
         }
 
-        &__info {
+        &__title {
             width: 100%;
+            display: flex;
+            align-items: center;
+            margin-bottom: 0;
+            line-height: 18px;
 
-            @media @query-md {
+            font-size: @font-size-small;
+            font-weight: 400;
+            color: @color-base;
+            text-decoration: none;
+
+            @media @query-sm {
                 width: calc(~"100% - @{list-article-product-item-image-size}");
                 padding-left: 15px;
             }
 
-            &__content {
-                display: flex;
-                margin-bottom: 10px;
+            &:hover {
+                text-decoration: underline;
+                color: @color-base;
+            }
+        }
 
-                @media @query-md {
-                    margin-bottom: 18px;
-                }
+        &__info {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
 
-                &__left {
-                    width: 100% / 2;
-                    display: flex;
-                    align-items: center;
-                }
+            @media @query-sm {
+                flex-direction: row;
+                margin-top: 10px;
+            }
 
-                &__right {
-                    width: 100% / 2;
-                    padding-left: 10px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-end;
-                    justify-content: center;
+            &__left {
+                width: 100%;
+
+                @media @query-sm {
+                    width: @list-article-product-item-info-left;
                 }
             }
 
-            &__title {
-                display: block;
-                margin-bottom: 0;
-                line-height: 18px;
+            &__right {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
 
-                font-size: @font-size-extra-small;
-                font-weight: 400;
-                color: @color-base;
-                text-decoration: none;
-
-                &:hover {
-                    text-decoration: underline;
-                    color: @color-base;
+                @media @query-sm {
+                    width: calc(~"100% - @{list-article-product-item-info-left}");
+                    padding-left: 10px;
+                    align-items: flex-end;
                 }
             }
 
             &__price {
                 line-height: 18px;
+                margin-bottom: 5px;
 
                 &__main {
                     display: block;
@@ -105,6 +99,7 @@
 
                     color: @color-price;
                     font-weight: 700;
+                    font-size: @font-size-small;
                 }
 
                 &__old {
@@ -115,10 +110,6 @@
                     color: @color-price-old;
                     text-decoration: line-through;
                 }
-            }
-        
-            &__add-button {
-                width: 100%;
             }
         }
     }
