--- a/templates/Front/Content/Order/repeatGoPayPayment.html.twig
+++ b/templates/Front/Content/Order/repeatGoPayPayment.html.twig
@@ -14,9 +14,11 @@
 {% block main_content %}
     <div class="web__line">
         <div class="web__container web__container--big-padding">
-            <h1 class="in-title in-title--center in-title--big">{{ 'Uhrazení objednávky č. %orderNumber% platební kartou.'|trans({'%orderNumber%': order.number}) }}</h1>
+            <div class="wrap-page">
+                <h1 class="in-title in-title--center in-title--big">{{ 'Uhrazení objednávky č. %orderNumber% platební kartou.'|trans({'%orderNumber%': order.number}) }}</h1>
 
-            <p class="in-user-text text-center">{{ 'Nyní budete přesměrováni na platební bránu GoPay.'|trans }}</p>
+                <p class="in-user-text text-center">{{ 'Nyní budete přesměrováni na platební bránu GoPay.'|trans }}</p>
+            </div>
         </div>
     </div>
 
