--- a/templates/Front/Content/Product/ajaxList.html.twig
+++ b/templates/Front/Content/Product/ajaxList.html.twig
@@ -5,8 +5,8 @@
 <div class="box-list__wrap">
     <div class="box-list__panel js-product-list-panel">
         <div class="box-filter js-product-filter">
-            {% if saleCategoryFriendlyUrl %}
-                {% set categoryUrl = url('front_sale_product_list', { friendlyUrl: saleCategoryFriendlyUrl }) %}
+            {% if isSaleCategory %}
+                {% set categoryUrl = url('front_sale_product_list', { id: category.id }) %}
             {% else %}
                 {% set categoryUrl = url('front_product_list', { id: category.id }) %}
             {% endif %}
