--- a/templates/Front/Content/Category/categoryList.html.twig
+++ b/templates/Front/Content/Category/categoryList.html.twig
@@ -37,7 +37,7 @@
             <ul class="list-categories js-tabs-content {{ cssClass|default('') }}" data-tab-id="categories">
                 {% for category in categories %}
                     {% if currentCategory is defined and currentCategory.isSaleType %}
-                        {% set categoryUrl = url('front_sale_product_list', { friendlyUrl: findMainFriendlyUrl('front_product_list', category.id) }) %}
+                        {% set categoryUrl = url('front_sale_product_list', { id: category.id }) %}
                     {% else %}
                         {% set categoryUrl = url('front_product_list', { id: category.id }) %}
                     {% endif %}
